test/fixtures/diagnostics/type-checker/negative/unknown-access-requires-narrowing/input.tysh
namespace Samples.UnknownAccess.Negative

type Named = { Name: string }

fun allowedShape(value: Named): string =
  value.Name

fun missingMemberNarrowing(value: unknown): string =
  value.Name

fun missingCallCalleeNarrowing(value: unknown): string =
  value.Name.ToString()

fun missingIndexerNarrowing(value: unknown): string =
  value[0]
